# core-python-template

./: .cursorignore  .cursorindexingignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TDD.md  claude.md  docker-compose.yml  pyproject.toml
.claude/: settings.json  settings.local.json.example  statusline.sh
.claude/agents/: codex-style-agent.md
.claude/hooks/: pr-description.sh  pre-commit-check.sh  security-gate.sh  test-reminder.sh
.claude/skills/: checkpoint.md  db-migrate.md  debug.md  document.md  lint.md  new-feature.md  new-prd.md  optimize.md  refactor.md  review.md  security-scan.md  test.md  worktree.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: CURSOR_BEST_PRACTICES.md  CURSOR_CONTEXT_STRATEGY.md  CURSOR_MCP_SETUP.md  CURSOR_QUICK_REFERENCE.md
observability/: README.md
observability/grafana/dashboards/: app-overview.json
observability/grafana/provisioning/datasources/: datasources.yml
observability/loki/: loki-config.yml
observability/prometheus/: prometheus.yml
observability/promtail/: promtail-config.yml
prd/: 00_PRD_index.md  01_Technical_standards.md  02_Tech_stack.md  03_Security.md  04_AI_Agent_Development_Standards.md  12_Observability_and_Metrics.md  PRD_REVIEW.md  PRD_TEMPLATE.md
prd/tasks/: TASK_TEMPLATE.md  example_user_auth_tasks.md
prisma/: schema.prisma
prisma/migrations/: add_vector_column.sql
scripts/: init-db.sql  worktree.sh
src/project_name/: __init__.py  cli.py  config.py  main.py
src/project_name/ai/: __init__.py  base.py  config.py  exceptions.py  models.py  tracking.py
src/project_name/ai/clients/: __init__.py  openai.py
src/project_name/ai/prompts/: __init__.py  base.py
src/project_name/api/: __init__.py  metrics.py  routes.py  search.py
src/project_name/db/: __init__.py
src/project_name/logging/: __init__.py  audit.py  config.py  context.py  formatters.py  logger.py  middleware.py
src/project_name/metrics/: __init__.py  collector.py  config.py  middleware.py
src/project_name/models/: __init__.py  embedding.py
src/project_name/services/: __init__.py  vector_search.py
src/project_name/utils/: __init__.py
tests/: conftest.py
tests/integration/: conftest.py  test_api_integration.py  test_db_operations.py  test_vector_search.py
tests/unit/: test_api.py  test_config.py
tests/unit/ai/: test_config.py  test_exceptions.py  test_factory.py  test_models.py  test_openai.py  test_prompts.py  test_tracking.py
tests/unit/api/: test_search.py
tests/unit/metrics/: __init__.py  test_collector.py  test_config.py  test_middleware.py
