[project]
name = "core-python-template"
version = "0.1.0"
description = "Batteries-included Python template for AI-assisted development with Cursor and Claude Code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Core Industries" },
]
keywords = ["fastapi", "typer", "prisma", "postgresql", "cursor", "claude", "ai-assisted", "template", "boilerplate"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Typing :: Typed",
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # CLI Framework
    "typer>=0.15.0",
    "rich>=13.9.0",
    # Database
    "prisma>=0.15.0",
    # Data Validation & Settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Environment
    "python-dotenv>=1.0.0",
    # HTTP Client
    "httpx>=0.28.0",
    # Async
    "anyio>=4.7.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    # Linting & Formatting
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    # Security
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    # Pre-commit
    "pre-commit>=4.0.0",
    # Type stubs
    "types-redis>=4.6.0",
]
redis = [
    "redis>=5.2.0",
]
metrics = [
    "prometheus-client>=0.21.0",
]

[project.scripts]
# CLI entry point - TODO: rename to your project
app = "project_name.cli:app"

[project.urls]
Homepage = "https://github.com/coreindustries/core-python-template"
Documentation = "https://github.com/coreindustries/core-python-template#readme"
Repository = "https://github.com/coreindustries/core-python-template"
Issues = "https://github.com/coreindustries/core-python-template/issues"

# =============================================================================
# Build System
# =============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/project_name"]

# =============================================================================
# Ruff - Linting & Formatting
# =============================================================================

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "RUF",    # ruff-specific rules
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
]
ignore = [
    "PLR0913",  # Too many arguments - sometimes necessary
    "PLR2004",  # Magic value in comparison - sometimes cleaner
    "S101",     # Use of assert - fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "ARG001",  # Unused function args (fixtures)
    "PLR2004", # Magic values in tests
]
"scripts/**/*.py" = [
    "T20",     # Allow print in scripts
]

[tool.ruff.lint.isort]
known-first-party = ["project_name"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# =============================================================================
# MyPy - Type Checking
# =============================================================================

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Strict mode settings
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_equality = true
strict_concatenate = true

# Per-module overrides
[[tool.mypy.overrides]]
module = [
    "prisma.*",
    "uvicorn.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

# =============================================================================
# Pytest - Testing
# =============================================================================

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",                    # Show extra summary for all except passed
    "-q",                     # Quiet mode
    "--strict-markers",       # Error on unknown markers
    "--strict-config",        # Error on config issues
    "-x",                     # Stop on first failure
    "--tb=short",             # Shorter traceback
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",                  # Treat warnings as errors
    "ignore::DeprecationWarning",
]

# =============================================================================
# Coverage - Test Coverage
# =============================================================================

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# =============================================================================
# Bandit - Security
# =============================================================================

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101"]  # Skip assert warning (used in tests)
